--- a/src/common.blocks/button.scss
+++ b/src/common.blocks/button.scss
@@ -17,4 +17,8 @@
     @include mixins.button(white, $primaryLight, $primaryLight);
     border: $hoverBorder;
   }
+
+  &_alt-disable {
+    background-color: rgb(211, 211, 211);
+  }
 }
