--- a/src/common.blocks/basket.scss
+++ b/src/common.blocks/basket.scss
@@ -5,11 +5,15 @@
   @include mixins.flex(column);
   gap: 2rem;
   height: 100%;
+  max-height: 90vh; // ограничиваем высоту модалки
+  overflow: hidden; // скрываем всё, что выходит
 
   &__list {
     padding: 0;
     margin: 0;
     flex-grow: 1;
+    overflow-y: auto;
+    min-height: 0; // важно для корректной работы flex внутри ограниченного контейнера
   }
 
   &__item {
