--- a/src/common.blocks/form.scss
+++ b/src/common.blocks/form.scss
@@ -21,6 +21,20 @@
     box-sizing: border-box;
     outline-color: $secondary;
 
+    &_type_error {
+      border-bottom: 1px solid red;
+    }
+
+    &__errors {
+      width: 100%;
+    }
+
+    &__error {
+      display: block;
+      color: red;
+      font-size: 12px;
+    }
+
     &:focus {
       outline-style: solid;
     }
