--- a/src/common.blocks/form.scss
+++ b/src/common.blocks/form.scss
@@ -1,51 +1,37 @@
-@use "variables" as *;
-@use "mixins";
+@use 'variables' as *;
+@use 'mixins';
 
 .form {
-  @include mixins.flex(column);
-  gap: 1.5rem;
-  border-radius: 3rem;
+	@include mixins.flex(column);
+	gap: 1.5rem;
+	border-radius: 3rem;
 
-  &__label {
-    flex-grow: 1;
-  }
+	&__label {
+		flex-grow: 1;
+	}
 
-  &__input {
-    background: transparent;
-    color: white;
-    border: $defaultBorder;
-    border-radius: 1.5rem;
-    padding: 1rem;
-    font-size: 1.4rem;
-    width: 100%;
-    box-sizing: border-box;
-    outline-color: $secondary;
+	&__input {
+		background: transparent;
+		color: white;
+		border: $defaultBorder;
+		border-radius: 1.5rem;
+		padding: 1rem;
+		font-size: 1.4rem;
+		width: 100%;
+		box-sizing: border-box;
+		outline-color: $secondary;
 
-    &_type_error {
-      border-bottom: 1px solid red;
-    }
+		&:focus {
+			outline-style: solid;
+		}
 
-    &__errors {
-      width: 100%;
-    }
+		&:invalid {
+			border-color: $error;
+			outline-color: $error;
+		}
 
-    &__error {
-      display: block;
-      color: red;
-      font-size: 12px;
-    }
-
-    &:focus {
-      outline-style: solid;
-    }
-
-    &:invalid {
-      border-color: $error;
-      outline-color: $error;
-    }
-
-    &::placeholder {
-      color: lighten($primaryLight, 23%);
-    }
-  }
+		&::placeholder {
+			color: lighten($primaryLight, 23%);
+		}
+	}
 }
